[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Tree.gd" type="Script" id=1]
[ext_resource path="res://assets/trees/tree_life.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 20 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 50, 10 )

[node name="Tree" type="Node2D"]
script = ExtResource( 1 )

[node name="TreeLife" type="Sprite" parent="."]
position = Vector2( 0, -57.112 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -100 )
scale = Vector2( 2.5, 6 )
shape = SubResource( 1 )

[node name="DefenseArea" type="Area2D" parent="."]
position = Vector2( 60, -20 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DefenseArea"]
shape = SubResource( 4 )

[node name="Buff" type="Timer" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_entered" from="DefenseArea" to="." method="_on_DefenseArea_area_entered"]
[connection signal="area_exited" from="DefenseArea" to="." method="_on_DefenseArea_area_exited"]
[connection signal="timeout" from="Buff" to="." method="_on_Buff_timeout"]
